Refactor header and footer into shared components and implement dynamic loading

--- a/alibaug.html
+++ b/alibaug.html
@@ -11,32 +11,7 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">WanderToWonder</div>
-        <nav class="nav">
-            <div class="nav-item">
-                <a href="index.html" class="nav-link">Home</a>
-            </div>
-            <div class="nav-item">
-                <a href="dubai.html" class="nav-link">Dubai</a>
-            </div>
-            <div class="nav-item">
-                <a href="srilanka.html" class="nav-link">Sri Lanka</a>
-            </div>
-            <div class="nav-item">
-                <a href="australia.html" class="nav-link">Australia</a>
-            </div>
-            <div class="nav-item has-dropdown">
-                <span class="nav-link active">India</span>
-                <div class="dropdown-menu">
-                    <a href="statue-of-unity.html" class="dropdown-item">Statue of Unity</a>
-                    <a href="dapoli.html" class="dropdown-item">Dapoli</a>
-                    <a href="alibaug.html" class="dropdown-item">Alibaug</a>
-                </div>
-            </div>
-        </nav>
-        <div class="hamburger"><span></span><span></span><span></span></div>
-    </header>
+    <div id="header-placeholder"></div>
 
     <main>
         <section class="page-header">
@@ -51,30 +26,7 @@
         </div>
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WanderToWonder.</p>
-            <div class="footer-links">
-                <div class="footer-group">
-                    <h4>International</h4>
-                    <a href="dubai.html">Dubai</a>
-                    <a href="srilanka.html">Sri Lanka</a>
-                    <a href="australia.html">Australia</a>
-                </div>
-                <div class="footer-group">
-                    <h4>India</h4>
-                    <a href="statue-of-unity.html">Statue of Unity</a>
-                    <a href="dapoli.html">Dapoli</a>
-                    <a href="alibaug.html" class="active">Alibaug</a>
-                </div>
-                <div class="footer-group">
-                    <h4>About</h4>
-                    <a href="vision-mission.html">Philosophy</a>
-                    <a href="co-travellers.html">Co-Travellers</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
 
     <script src="gallery.js"></script>
     <script>
