Add high-quality hero image to index page and fix CSS lints

--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
 
     <main>
         <section class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">Journeys in <span class="text-highlight">Life!</span></h1>
-                <p class="hero-subtitle">My personal travel diary exploring vibrant destinations across the globe - from
-                    international adventures to discovering the beauty of India.</p>
-                <div class="hero-buttons">
-                    <a href="#destinations" class="btn btn-primary">Explore Destinations</a>
-                    <a href="#about" class="btn btn-secondary">About Me</a>
+            <div class="container hero-container">
+                <div class="hero-content">
+                    <h1 class="hero-title">Journeys in <span class="text-highlight">Life!</span></h1>
+                    <p class="hero-subtitle">My personal travel diary exploring vibrant destinations across the globe -
+                        from
+                        international adventures to discovering the beauty of India.</p>
+                    <div class="hero-buttons">
+                        <a href="#destinations" class="btn btn-primary">Explore Destinations</a>
+                        <a href="#about" class="btn btn-secondary">About Me</a>
+                    </div>
+                </div>
+                <div class="hero-image">
+                    <img src="https://placehold.jp/800x800.png?text=WanderToWonder+Hero" alt="Travel Adventures"
+                        id="hero-img">
                 </div>
             </div>
         </section>
