--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?auto=format&fit=crop&w=1200&q=80"
-                        alt="WanderToWonder - Global Adventures" id="hero-img"
+                    <img src="images/hero-travel.jpg" alt="WanderToWonder - Global Adventures" id="hero-img"
                         onerror="this.style.display='none'; this.parentElement.classList.add('img-failed');">
                 </div>
             </div>
