Update Australia OneDrive shared folder link

--- a/australia.html
+++ b/australia.html
@@ -31,7 +31,7 @@
     <script src="gallery.js"></script>
     <script>
         // OneDrive shared album/folder link. Keep it public ("Anyone with the link can view").
-        const australiaOneDriveShareLink = 'https://onedrive.live.com/?qt=allmyphotos&photosData=%2Fshare%2F97C5E937E7E76F1C%21s186ea51dc609450da5520f52e0a89669%3Fithint%3Dalbum%26migratedtospo%3Dtrue&cid=97C5E937E7E76F1C&id=97C5E937E7E76F1C%21s186ea51dc609450da5520f52e0a89669&redeem=aHR0cHM6Ly8xZHJ2Lm1zL2EvYy85N2M1ZTkzN2U3ZTc2ZjFjL0lnQWRwVzRZQ2NZTlJhVlNEMUxncUpacEFUWVAweEtYbTQ0UkVYVHFiMEJBTkNj&v=photos';
+        const australiaOneDriveShareLink = 'https://1drv.ms/a/c/97c5e937e7e76f1c/IgAdpW4YCcYNRaVSD1LgqJZpATYP0xKXm44REXTqb0BANCc?e=nAaejO';
 
         PhotoGallery.loadBestSource({
             containerId: 'australia-gallery',
