Hide gallery mode toggle UI while preserving mode overrides

--- a/dubai.html
+++ b/dubai.html
@@ -50,7 +50,8 @@
             localJsonPath: 'data/dubai.json',
             destinationName: 'Dubai',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:dubai'
+            modeStorageKey: 'gallery-mode:dubai',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
