--- a/statue-of-unity.html
+++ b/statue-of-unity.html
@@ -51,7 +51,8 @@
             localJsonPath: 'data/statue-of-unity.json',
             destinationName: 'Statue of Unity',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:statue-of-unity'
+            modeStorageKey: 'gallery-mode:statue-of-unity',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
