--- a/alibaug.html
+++ b/alibaug.html
@@ -51,7 +51,8 @@
             localJsonPath: 'data/alibaug.json',
             destinationName: 'Alibaug',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:alibaug'
+            modeStorageKey: 'gallery-mode:alibaug',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
