--- a/australia.html
+++ b/australia.html
@@ -51,7 +51,8 @@
             localJsonPath: 'data/australia.json',
             destinationName: 'Australia',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:australia'
+            modeStorageKey: 'gallery-mode:australia',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
