--- a/dapoli.html
+++ b/dapoli.html
@@ -51,7 +51,8 @@
             localJsonPath: 'data/dapoli.json',
             destinationName: 'Dapoli',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:dapoli'
+            modeStorageKey: 'gallery-mode:dapoli',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
