--- a/srilanka.html
+++ b/srilanka.html
@@ -51,7 +51,8 @@
             localJsonPath: 'data/srilanka.json',
             destinationName: 'Sri Lanka',
             defaultMode: 'auto',
-            modeStorageKey: 'gallery-mode:srilanka'
+            modeStorageKey: 'gallery-mode:srilanka',
+            showModeToggle: false
         });
     </script>
     <script src="script.js"></script>
