Add India subfolder trip sync and wire Dubai/Sri Lanka links

--- a/dubai.html
+++ b/dubai.html
@@ -42,7 +42,7 @@
             : '';
 
         // OneDrive shared album/folder link. Keep it public ("Anyone with the link can view").
-        const dubaiOneDriveShareLink = 'PASTE_DUBAI_ONEDRIVE_SHARED_ALBUM_LINK_HERE';
+        const dubaiOneDriveShareLink = 'https://1drv.ms/f/c/97c5e937e7e76f1c/IgCiXVxfueiaQo1EzIMvEaXzAcifmSV0qtipnqfB7fsRTOg?e=ZltGbW';
         PhotoGallery.loadWithSourceToggle({
             containerId: 'dubai-gallery',
             apiEndpoint: dubaiApiEndpoint,
