--- a/srilanka.html
+++ b/srilanka.html
@@ -42,7 +42,7 @@
             : '';
 
         // OneDrive shared album/folder link. Keep it public ("Anyone with the link can view").
-        const srilankaOneDriveShareLink = 'PASTE_SRILANKA_ONEDRIVE_SHARED_ALBUM_LINK_HERE';
+        const srilankaOneDriveShareLink = 'https://1drv.ms/f/c/97c5e937e7e76f1c/IgC4UToTesbPQppGfDfIVdp8Afp62M9qJqIoWcLW38QyheQ?e=eAeRrr';
 
         PhotoGallery.loadWithSourceToggle({
             containerId: 'srilanka-gallery',
