Implement SEO tags, native share button, and Giscus comments across all journals

--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WanderToWonder | Explore the World</title>
-    <meta name="description" content="Sharing our travel experiences from Australia, Sri Lanka, Dubai and beyond.">
+    <meta name="description"
+        content="Sharing our travel experiences from Australia, Sri Lanka, Dubai and beyond. Explore global journeys through interactive maps and journals.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://summitize.github.io/WanderToWonder/">
+    <meta property="og:title" content="WanderToWonder | Explore the World">
+    <meta property="og:description"
+        content="Personal travel diary exploring vibrant destinations across the globe - from international adventures to the beauty of India.">
+    <meta property="og:image" content="https://summitize.github.io/WanderToWonder/photos/landing_page.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://summitize.github.io/WanderToWonder/">
+    <meta property="twitter:title" content="WanderToWonder | Explore the World">
+    <meta property="twitter:description"
+        content="Personal travel diary exploring vibrant destinations across the globe.">
+    <meta property="twitter:image" content="https://summitize.github.io/WanderToWonder/photos/landing_page.png">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TravelAgency",
+      "name": "WanderToWonder",
+      "url": "https://summitize.github.io/WanderToWonder/",
+      "image": "https://summitize.github.io/WanderToWonder/photos/landing_page.png",
+      "description": "Sharing travel experiences from Australia, Sri Lanka, Dubai, and India.",
+      "brand": {
+        "@type": "Brand",
+        "name": "WanderToWonder"
+      }
+    }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -192,4 +226,3 @@
 </body>
 
 </html>
-
