--- a/srilanka.html
+++ b/srilanka.html
@@ -4,7 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sri Lanka | WanderToWonder</title>
+    <title>Sri Lanka Journal | WanderToWonder</title>
+    <meta name="description"
+        content="Explore my travel experiences in Sri Lanka - tea plantations, ancient temples, and pristine beaches.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://summitize.github.io/WanderToWonder/srilanka.html">
+    <meta property="og:title" content="Sri Lanka Journey | WanderToWonder">
+    <meta property="og:description" content="The Pearl of the Indian Ocean. Read the full travel journal.">
+    <meta property="og:image" content="https://summitize.github.io/WanderToWonder/photos/srilanka/hero.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Sri Lanka Journey | WanderToWonder">
+    <meta property="twitter:description" content="The Pearl of the Indian Ocean.">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "headline": "Sri Lanka Journey",
+      "image": "https://summitize.github.io/WanderToWonder/photos/srilanka/hero.jpg",
+      "author": {
+        "@type": "Person",
+        "name": "Sumeet Boob"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "WanderToWonder"
+      },
+      "url": "https://summitize.github.io/WanderToWonder/srilanka.html"
+    }
+    </script>
+
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
@@ -18,6 +52,9 @@
         <section class="page-header">
             <h1 class="page-title">Sri Lanka</h1>
             <p class="page-subtitle">The Pearl of the Indian Ocean</p>
+            <button class="btn btn-secondary share-page-btn" id="share-btn">
+                <span>📤</span> Share Journal
+            </button>
         </section>
 
         <div class="content-section">
@@ -25,6 +62,21 @@
                 <div id="srilanka-gallery"></div>
             </div>
         </div>
+
+        <!-- Comments Section -->
+        <section class="section comments-section">
+            <div class="container">
+                <h2 class="section-title">Travel <span class="text-highlight">Discussions</span></h2>
+                <div class="giscus-wrapper">
+                    <script src="https://giscus.app/client.js" data-repo="summitize/WanderToWonder"
+                        data-repo-id="R_kgDONSz64w" data-category="Announcements"
+                        data-category-id="DIC_kwDONSz6484CklO3" data-mapping="pathname" data-strict="0"
+                        data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
+                        data-theme="preferred_color_scheme" data-lang="en" crossorigin="anonymous" async>
+                        </script>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div id="footer-placeholder"></div>
